<?xml version="1.0"?>
<package format="2">
  <name>marshmallow_oneofschema</name>
  <version>0.0.0</version>
  <description>The marshmallow_oneofschema package</description>

  <maintainer email="ramon@ruvu.nl">Ramon Wijnands</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>marshmallow</exec_depend>
</package>
